# trouver-une-fresque

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TUTORIAL.md  TUTORIAL_OSM.md  WORKSHOPS.md  compare.py  config.json.dist  devenv.nix  devenv.yaml  loop.sh  push_to_db.py  pyproject.toml  requirements.txt  scrape.py
.github/: FUNDING.yml
apis/: glorieuses.py  main.py
db/: etl.py  main.py  records.py
scraper/: billetweb.py  etl_proccess.py  eventbrite.py  eventbrite_api.py  fdc.py  fec.py  glide.py  helloasso.py  main.py  records.py
scripts/: install  scrape
supabase/: tables.sql
utils/: errors.py  keywords.py  location.py  readJson.py  utils.py
