[project]
name = "trouver-une-fresque"
version = "0.1.0"
description = "Détection d'ateliers sensibilisant aux questions climatiques et sociales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "psycopg>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "selenium>=4.26.1",
    "tabulate>=0.9.0",
]
